--- a/app/views/instance_admin/manage/transactable_types/_common_settings.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/_common_settings.html.haml
@@ -10,11 +10,16 @@
     = f.input :hours_to_expiration, required: false, input_html: { class: 'form-control' }
 .row
   .input-container.col-xs-6
-    = f.input :service_fee_guest_percent do
-      = f.input_field :service_fee_guest_percent, type: 'tel', class: 'form-control'
-  .input-container.col-xs-6
     = f.input :service_fee_host_percent do
       = f.input_field :service_fee_host_percent, type: 'tel', class: 'form-control'
+  .input-container.col-xs-6
+    = f.input :minimum_lister_service_fee, label: "Minimum fee (Amount)" do
+      = f.input_field :minimum_lister_service_fee, type: 'tel', class: 'form-control'
+
+.row
+  .input-container.col-xs-6
+    = f.input :service_fee_guest_percent do
+      = f.input_field :service_fee_guest_percent, type: 'tel', class: 'form-control'
 
 %h4= t('instance_admin.manage.transactable_types.cancellation_policy')
 .row
