NM-5743 correct periods + reservation amount for volte

--- a/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
+++ b/lib/tasks/volte/liquid_views/dashboard--company--reservations--reservation.liquid
@@ -105,7 +105,7 @@
       </tr>
       <tr>
         <td></td>
-        <td class="item-reservation__costs-total">{{ reservation.total_payable_to_host_formatted }}</td>
+        <td class="item-reservation__costs-total">{{ reservation.total_price }}</td>
       </tr>
     </table>
   </div>
