--- a/lib/tasks/litvault/liquid_views/search/_list_cases.liquid
+++ b/lib/tasks/litvault/liquid_views/search/_list_cases.liquid
@@ -92,10 +92,10 @@
             </div>
 
             <div class="search-result-meta-action">
-              {% if collaborator.approved_by_owner? or current_user.id == case.creator_id %}
-                <a class="button-a inverted"  href="{{ case.url }}" >Bid on Case</a>
-              {% else %}
-                <a href="#case-permission-request-{{ case.id }}" class="button-a inverted" data-case-invite-trigger>Bid on Case</a>
+              {% if collaborator.approved_by_owner? %}
+                <a class="button-a inverted"  href="{{ case.url }}" >Make an Offer</a>
+              {% elsif  current_user.id != case.creator_id %}
+                <a href="#case-permission-request-{{ case.id }}" class="button-a inverted" data-case-invite-trigger>Request Access</a>
               {% endif %}
 
               <div class="meta">
