NM-6011-500-when-instance-admin-accesses-custom-theme

--- a/app/views/instance_admin/manage/users/edit.html.haml
+++ b/app/views/instance_admin/manage/users/edit.html.haml
@@ -70,10 +70,10 @@
           %td= @user.sign_in_count
         %tr
           %td Current sign in at
-          %td= l @user.current_sign_in_at, format: :long
+          %td= l(@user.current_sign_in_at, format: :long) if @user.current_sign_in_at.present?
         %tr
           %td Last sign in at
-          %td= l @user.last_sign_in_at, format: :long
+          %td= l @user.last_sign_in_at, format: :long  if @user.current_sign_in_at.present?
         %tr
           %td Current sign in IP
           %td= @user.current_sign_in_ip
