NM-5750 first draft of registrations/show view

--- a/lib/tasks/uot/templates/listings_project_details.liquid
+++ b/lib/tasks/uot/templates/listings_project_details.liquid
@@ -81,7 +81,7 @@
                 <ul class="company-properties">
                     <li><b>10</b> Projects Posted</li>
                     <li><b>2</b> Projects Completed</li>
-                    <li>Member Since 2/19/2015</li>
+                    <li>{{ 'registrations.member_since' | translate }} 2/19/2015</li>
                 </ul>
 
                 <hr>
