--- a/app/views/shared/payment_methods/_credit_card.html.haml
+++ b/app/views/shared/payment_methods/_credit_card.html.haml
@@ -41,9 +41,8 @@
 
     = render 'listings/reservations/confirm_reservations', f: f
 
-- content_for :javascript do
+:javascript
   $(document).trigger('init:paymentMethodCreditCard.nearme');
-
 
 
 
