--- a/lib/tasks/litvault/liquid_views/search/_list_cases.liquid
+++ b/lib/tasks/litvault/liquid_views/search/_list_cases.liquid
@@ -1,3 +1,10 @@
+{% capture is_lister %}{% if current_user.buyer_profile == blank %}true{% else %}false{% endif %}{% endcapture %}
+{% if is_lister == 'true' %}
+  {% assign role = 'lister' %}
+{% else %}
+  {% assign role = 'enquirer' %}
+{% endif %}
+
 <section class="search-form-wrapper">
   <div class="container-fluid">
     <div class="search-form-inner">
@@ -92,10 +99,12 @@
             </div>
 
             <div class="search-result-meta-action">
-              {% if collaborator.approved_by_owner? %}
-                <a class="button-a inverted"  href="{{ case.url }}" >Make an Offer</a>
-              {% elsif  current_user.id != case.creator_id %}
-                <a href="#case-permission-request-{{ case.id }}" class="button-a inverted" data-case-invite-trigger>Request Access</a>
+              {% if role == 'enquirer'  %}
+                {% if collaborator.approved_by_owner? %}
+                  <a class="button-a inverted"  href="{{ case.url }}" >Make an Offer</a>
+                {% elsif  current_user.id != case.creator_id %}
+                  <a href="#case-permission-request-{{ case.id }}" class="button-a inverted" data-case-invite-trigger>Request Access</a>
+                {% endif %}
               {% endif %}
 
               <div class="meta">
@@ -137,7 +146,9 @@
           {% endif %}
         </article>
 
-        <div class="case-invite" id="case-permission-request-{{ case.id }}" data-collaborations-url="{{ case.url }}"></div>
+        {% if role == 'enquirer'  %}
+          <div class="case-invite" id="case-permission-request-{{ case.id }}" data-collaborations-url="{{ case.url }}"></div>
+        {% endif %}
 
         <script>
           $(function(){
