NM-5567 Favorite lawyers

--- a/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_enquirer_header.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_enquirer_header.liquid
@@ -1,4 +1,4 @@
-<h1>{{ 'wish_lists.enquirer.name' | translate }}</h1>
+<h1>Favorites</h1>
 
 {% form_for 'wish-list-items-sort', url: '/' %}
   <label for='sort-by'>{{ 'wish_lists.sort.label' | translate }}</label>
