--- a/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_lister_header.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_lister_header.liquid
@@ -1,2 +1,3 @@
-<h1>{{ 'wish_lists.lister.name' | translate }}</h1>
-<a href='#case-bulk-invite' data-case-bulk-invite-trigger>{{ 'wish_lists.buttons.bulk_invite_to_case' | translate }}</a>
+<div class="options">
+  <a href="#case-bulk-invite" data-case-bulk-invite-trigger class="btn btn-primary">Bulk Invite</a>
+</div>
