--- a/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/index.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/index.liquid
@@ -10,19 +10,24 @@
   <div class='panel-body'>
 
     {% if items.size > 0 %}
-      <div class='wish-list'>
-        {% if current_user.has_seller_profile? %}
+      {% if current_user.has_seller_profile? %}
+        <div class="favorite-lawyers">
           {% include 'dashboard/wish_list_items/wish_list_lister_item' for items %}
-        {% else %}
+        </div>
+      {% else %}
+        <div class="favorite-cases">
           {% include 'dashboard/wish_list_items/wish_list_enquirer_item' for items %}
-        {% endif %}
-      </div>
+        </div>
+      {% endif %}
     {% else %}
       <p class='empty-resultset'>{{ 'wish_lists.empty_list' | translate }}</p>
     {% endif %}
 
     {% if current_user.has_seller_profile? %}
+      {% content_for 'body_bottom' %}
       <div id="case-bulk-invite" class='case-invite' data-collaborations-url="{{ 'bulk_collaborations_for_current_user_dashboard_company_users_path' | generate_url }}"></div>
+      }
+      {% endcontent_for %}
     {% endif %}
   </div>
 </div>
