--- a/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
+++ b/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
@@ -131,7 +131,7 @@
                 <a class="button-a inverted" href="{{ 'new_dashboard_order_path' | generate_url: transactable_id: listing.id }}">Make an Offer</a>
               </li>
             {% endif %}
-            {% if current_user.has_seller_profile? %}
+            {% if current_user.has_buyer_profile? %}
               <li>
                 {% include 'shared/components/wish_list_button_injection.html', object: listing %}
               </li>
