NM-5877 Enable buyer search in litvault

--- a/lib/tasks/litvault/liquid_views/search/_user-case-toggler.liquid
+++ b/lib/tasks/litvault/liquid_views/search/_user-case-toggler.liquid
@@ -16,7 +16,7 @@
       <a href="/search?transactable_type_id={{ platform_context.transactable_types.first.id }}&amp;transactable_type_class=TransactableType">Case Search</a>
     </li>
     <li{% if search_type == 'user' %} class="selected"{% endif %}>
-      <a href="/search/people">Lawyer Search</a>
+      <a href="/search/people?profile_type=buyer">Lawyer Search</a>
     </li>
   </ul>
 </div>
