NM-5586 Cases favorites

--- a/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_enquirer_header.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/wish_list_items/_wish_list_enquirer_header.liquid
@@ -1,12 +1,1 @@
-<h1>Favorites</h1>
-
-{% form_for 'wish-list-items-sort', url: '/' %}
-  <label for='sort-by'>{{ 'wish_lists.sort.label' | translate }}</label>
-  <select name='sort-by'>
-    <option value='newest'>{{ 'wish_lists.sort.options.newest' | translate }}</option>
-    <option value='oldest'>{{ 'wish_lists.sort.options.oldest' | translate }}</option>
-    <option value='alphabetical'>{{ 'wish_lists.sort.options.alphabetical' | translate }}</option>
-    <option value='individual-cases'>{{ 'wish_lists.sort.options.individual_cases' | translate }}</option>
-    <option value='group-cases'>{{ 'wish_lists.sort.options.group_cases' | translate }}</option>
-  </select>
-{% endform_for %}
+<h1>Favorite cases</h1>
