--- a/app/views/dashboard/company/reservations/_reservation.html.liquid
+++ b/app/views/dashboard/company/reservations/_reservation.html.liquid
@@ -25,7 +25,7 @@
   {% if reservation.payment.active_merchant_payment? %}
     {% if reservation.payment.successful_billing_authorization != blank %}
       <div class='alert alert-warning'>{{ 'dashboard.host_reservations.money_info' | translate }}</div>
-      {% unless current_instance.manual_transfers? %}
+      {% unless platform_context.instance.manual_transfers? %}
         <div class='alert alert-warning'>
           {{ 'dashboard.host_reservations.next_payment_transfer' | translate: next_payment_transfer: reservation.next_payment_transfer }}
         </div>
