--- a/lib/tasks/volte/liquid_views/dashboard--reservations--reservation.liquid
+++ b/lib/tasks/volte/liquid_views/dashboard--reservations--reservation.liquid
@@ -24,10 +24,6 @@
           <span class='confirmed'>
             {{ "reservations.states.completed" | t }}
           </span>
-        {% elsif reservation.lister_confirmed_at and reservation.enquirer_confirmed_at == blank%}
-          <span class='ready_for_rent'>
-            Item Ready for Renting
-          </span>
         {% else %}
           <span class='{{ reservation.state }}'>
             {{ 'reservations.states.' | append: reservation.state | t }}
@@ -124,7 +120,50 @@
       <a class="button button-inverse" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: reservation.user_messages.first.id }}">{{ 'dashboard.user_reservations.send_message' | t}}</a>
     {% endif %}
 
-  {% include 'dashboard/company/host_reservations/owner_actions', reservation: reservation %}
+      {% if reservation.confirmed? %}
+        {% if reservation.inbound_shipment.label_url != blank %}
+          <a class="btn btn-default" href="{{ reservation.inbound_shipment.label_url }}">{{ 'dashboard.user_reservations.return_label' | t }}</a>
+        {% endif %}
+        {% if reservation.outbound_shipment.tracking_url_provider != blank %}
+          <a class="btn btn-default" href="{{ reservation.outbound_shipment.tracking_url_provider }}">{{ 'dashboard.user_reservations.track_package' | t }}</a>
+        {% endif %}
+      {% endif %}
+
+      {% if reservation.lister_confirmed_at and reservation.enquirer_confirmed_at == blank %}
+        <form class="edit_reservation" action="{{ 'approve_dashboard_order_path' | generate_url: id: reservation.id }}" accept-charset="UTF-8" method="post">
+          <input name="utf8" type="hidden" value="&#x2713;" />
+          <input type="hidden" name="authenticity_token" value="{{ form_authenticity_token }}" />
+          <input type="submit" name="commit" value="RENT ITEM" data-confirm="{{ 'confirmations.are_you_sure' | t }}" data-disable-with="{{ 'general.processing' | t }}" class="btn btn-inverse" />
+        </form>
+        <a class="button button-inverse" data-modal="true" href="{{ 'rejection_form_dashboard_user_reservation_payment_path' | generate_url: user_reservation_id: reservation.id, id: reservation.payment.id }}">CANCEL</a>
+      {% endif %}
+
+      {% if reservation.enquirer_approved_at and reservation.payment.pending? or reservation.payment.voided? %}
+        <span>
+          <a class="button button-inverse" data-modal='true' href="{{ 'edit_dashboard_user_reservation_payment_path' | generate_url: user_reservation_id: reservation.id, id: reservation.payment.id }}">{{ 'dashboard.user_reservations.update_credit_card' | t }}</a>
+        </span>
+        <div class="cc-error">{{ 'dashboard.user_reservations.must_change_credit_card' | t }}</div>
+      {% endif %}
+
+      {% unless reservation.archived? %}
+        {% if reservation.cancelable? and reservation.lister_confirmed_at == blank %}
+          <form class="edit_reservation" action="{{ 'user_cancel_dashboard_user_reservation_path' | generate_url: reservation.id }}" accept-charset="UTF-8" method="post">
+            <input name="utf8" type="hidden" value="&#x2713;" />
+            <input type="hidden" name="authenticity_token" value="{{ form_authenticity_token }}" />
+            <input type="submit" name="commit" value="CANCEL" data-confirm="{{ 'dashboard.user_reservations.cancel_confirmation' | t }}" class="button button-inverse" data-disable-with="{{ 'general.processing' | t }}" />
+          </form>
+          {% if reservation.penalty_charge_apply? %}
+            <div class="cc-error">
+              {{ 'dashboard.user_reservations.penalty_charge_will_apply' | t: penalty_hours: reservation.cancellation_policy_penalty_hours, penalty_fee: reservation.formatted_penalty_fee, hours_for_cancellation: reservation.cancellation_policy_hours_for_cancellation) }}
+            </div>
+          {% endif %}
+        {% endif %}
+        {% if reservation.remote_payment? and reservation.paid? == false and reservation.archived? == false %}
+          <a class="btn btn-default" href="{{ 'remote_payment_dashboard_user_reservation_path' | generate_url: reservation.id }}">
+            {{ 'dashboard.user_reservations.pay_now' | t }}
+          </a>
+        {% endif %}
+      {% endunless %}
 
   <p>Before approving rental, you need to set up your <a href="#payment_transfers">Payment Transfers</a>.</p>
 </div>
