NM-6039 Only search for buyers

--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/index.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/index.liquid
@@ -61,7 +61,7 @@
       </div>
 
       {% if current_user.has_seller_profile? %}
-      <p class="find-expert-link"><a href="/search/people" class="btn btn-primary">Find Handling Lawyer</a></p>
+      <p class="find-expert-link"><a href="/search/people?profile_type=buyer" class="btn btn-primary">Find Handling Lawyer</a></p>
       {% endif %}
   </div>
 {% endif %}
