--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
@@ -53,7 +53,7 @@
       </table>
     </div>
 
-    {% assign orders = current_user | get_enquirer_orders: transactable %}
+    {% assign orders = current_user | get_enquirer_draft_orders: transactable %}
 
     {% if orders != empty %}
       {% assign order = orders.last %}
@@ -73,20 +73,15 @@
               <td>
                 {{ 'reservations.states.' | append: order.state | t }}
               </td>
-              {% if order.unconfirmed? %}
+              {% if order.unconfirmed_or_draft? %}
                 <td>
-                  {% if order.unconfirmed? %}
-                    <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
-                    <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
-                  {% endif %}
+                  <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
+                  <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
                 </td>
               {% elsif order.confirmed? %}
-                <td>{{ order.confirmed_at | l: 'long' }}</td>
+                <td>Confirmed at {{ order.confirmed_at | l: 'long' }}</td>
               {% else %}
-                <td>{{ order.archived_at | l: 'long' }}</td>
-              {% endif %}
-              {% if order.confirmed? %}
-                <td><a href="{{ order.payment_documents[0].file_url }}" target="_blank">{{  order.payment_documents[0].file_name }}</a></td>
+                <td>Cancelled at {{ order.id }}</td>
               {% endif %}
             </tr>
           </tbody>
