NM 5971 Lender profile

--- a/lib/tasks/volte/liquid_views/search--list.liquid
+++ b/lib/tasks/volte/liquid_views/search--list.liquid
@@ -112,7 +112,7 @@ partial: false
           </div>
           <div class="item-info">
             <div class="item-description">
-              <h2><a href="{{ listing.show_path }}">{{ listing.name }}</a></h2>
+              <h2><a href="{{ listing.show_path }}" data-listing-path>{{ listing.name }}</a></h2>
               <p><strong>Designer:</strong> {{ listing.properties.designer_name }}</p>
             </div>
             <div class="item-pricing">
