--- a/lib/tasks/volte/liquid_views/registrations--show.liquid
+++ b/lib/tasks/volte/liquid_views/registrations--show.liquid
@@ -1,125 +1,110 @@
----
-partial: false
----
+<div class="wrapper-a">
+  <main class="search-results">
 
-<div class='row'>
-<div class='col-xs-8'>
-<main class='listings'>
-
-  <div class="wrapper-a">
-    <div class="item-top-bar">
-      <div class="user-bar">
-        <div class="user-bar__photo" style="background-image: url('{{ user.avatar_url_thumb }}')">
-        </div>
-
-        <div class="flex-container">
-          <div class="user-bar__name">
-            <a href="{{ user.user_profile_url }}">
-              {% if user.properties.use_alias_as_name == '1' %}
-                {{ user.properties.user_alias }}
-              {% else %}
-                {{ user.name }}
-              {% endif %}
-            </a>
-          </div>
-        </div>
-      </div>
+    <div class="user-bar__name">
+      <h1>
+        <a href="{{ user.user_profile_url }}">
+          {% if user.properties.use_alias_as_name == '1' %}
+            {{ user.properties.user_alias }}
+          {% else %}
+            {{ user.name }}
+          {% endif %}
+        </a>
+      </h1>
     </div>
-  </div>
 
-  {% for listing in user.listings %}
-    {% assign photos = listing.photos %}
+    <section class="search-results__items">
+      {% for listing in user.listings %}
+        {% assign photos = listing.photos %}
 
-    <div class='listing-show'>
-      <div class="item-top-bar">
-        <div class="user-bar">
-          <div class="user-bar__photo" style="background-image: url('{{ photos[0].original }}')">
+        <article data-listing>
+          <div class="item-photo">
+            <img src="{{ photos[0].space_listing }}" />
           </div>
 
-          <div class="flex-container">
-            <div class="listing-bar__name">
-              <div class="item-content">
+            <div class="item-info">
+              <div class="item-description">
                 <div class="item-name">
-                  <h1>{{ listing.name | filter_text }}</h1>
+                  <h4>
+                    <a href="{{ listing.show_path }}" data-listing-path>{{ listing.name | filter_text }}</a>
+                  </h4>
+                  <p>
+                    {% if listing.properties.designer_name != '' and listing.properties.designer_name != nil %}
+                      Designer:
+                      {{ listing.properties.designer_name }}
+                    {% endif %}
+                  </p>
                 </div>
+              </div>
 
-              </div> <!-- Item content -->
+              <div class="item-pricing">
+                <dl>
+                  {% for price in listing.action_type.sorted_pricings %}
+                    <dt>{{ price.number_of_units }} days: </dt>
+                    <dd>${{ price.price.amount }} AUD</dd>
+                  {% endfor %}
 
-              {% if listing.properties.designer_name != '' and listing.properties.designer_name != nil %}
-                Designer:
-                {{ listing.properties.designer_name }}
-              {% endif %}
+                  <dt>Bond value: </dt>
+                  <dd>${{ listing.properties.bond_value }} AUD</dd>
+                </dl>
+              </div>
             </div>
 
             <div class="item-actions">
               <ul>
-                <li class="separated">
+                <li class="item-actions__primary">
                   <form id="order_form_{{ listing.id }}" novalidate="novalidate" class="order" action="{{ 'listing_orders_path' | generate_url: listing }}" accept-charset="UTF-8" method="post">
                     <input name="utf8" type="hidden" value="">
                     <input name="authenticity_token" value="{{ form_authenticity_token }}" data-authenticity-token type="hidden">
                     <input value="{{ listing.id }}" type="hidden" name="order[transactable_id]" id="order_transactable_id">
                     <input value="{{ listing.action_type.pricings.first.id }}" type="hidden" name="order[transactable_pricing_id]" id="order_transactable_pricing_id">
-                    <input type="submit" class="button button-default" value="REQUEST ITEM">
+                    <input type="submit" class="button button-default button-small" value="REQUEST ITEM">
                   </form>
-                <li>
-                  <a data-listing-availability-toggle data-listing-availability-periods={{ listing.unavailable_periods }} class="button button-default datetimepicker"><input type="hidden" />
-                    CHECK AVAILABILITY
-                  </a>
                 </li>
-                <li>
-                  <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="button button-default" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}">
+                <li class="item-actions__secondary">
+                  <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="button button-inverse button-small" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}">
                     <div class="text-center"><img src="{{ 'components/modal/loader.gif' | image_url }}" /></div>
                   </div>
                 </li>
               </ul>
             </div> <!-- Item actions -->
-          </div>
-        </div>
 
-        <div class="item-pricing">
-          <dl>
-            {% for price in listing.action_type.sorted_pricings %}
-              <dt>{{ price.number_of_units }} days: </dt>
-              <dd>${{ price.price.amount }} AUD</dd>
-            {% endfor %}
+        </article>
+      {% endfor %}
+    </section>
+  </main>
 
-            <dt>Bond value: </dt>
-            <dd>${{ listing.properties.bond_value }} AUD</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
-  {% endfor %}
+  <aside class="search-sidebar">
+    <a href="#">< Back to my items</a>
 
-</div> <!-- Wrapper -->
-</main>
-</div>
+    <ul class="user-actions">
+      <li>
+        <a class="button button-inverse" data-modal="true" href="#" data-href="{{ 'new_user_message_path' | generate_url: user_id: user.id, skip: true }}">
+          READ BLOG
+        </a>
+      </li>
 
-<div class='col-xs-4'>
-  <aside>
-    <div class="user-bar__action-bar">
-      <ul>
+      <li>
+        <a class="button button-inverse" data-modal="true" href="#" data-href="{{ 'new_user_message_path' | generate_url: user_id: user.id, skip: true }}">
+          Message
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="button button-inverse">Call Client</a>
+      </li>
+
+      {% if user.has_active_blog? %}
         <li>
-          <a class="button button-inverse"" data-modal="true" data-href="{{ 'new_user_message_path' | generate_url: user_id: user.id, skip: true }}">
-            Message
+          <a href="{{ user.user_blog_posts_list_path }}" class="button button-inverse">
+            Lender's Blog
           </a>
         </li>
-        <li>
-          <a href="#" class="button button-inverse">Call Client</a>
-        </li>
-        {% if user.has_active_blog? %}
-          <li>
-            <a href="{{ user.user_blog_posts_list_path }}" class="button button-inverse">
-              Lender's Blog
-            </a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
+      {% endif %}
+    </ul>
 
-    <div class='about-user'>
-      {% if user.properties.biography != '' and user.properties.biography != nil %}
-
+    {% if user.properties.biography != '' and user.properties.biography != nil %}
+      <p class="text-bold">
         {{ 'general.about' | translate }}
 
         {% if user.properties.use_alias_as_name == '1' %}
@@ -129,30 +114,31 @@ partial: false
         {% endif %}
 
         {{ user.properties.biography }}
-      {% endif %}
-    </div>
+      </p>
 
-    <hr>
+      <hr />
+    {% endif %}
 
     {% assign listings_count = user.listings | size %}
 
     <ul>
       <li>
-        <strong> {{ listings_count }} </strong> {{ 'transactables.items_listed' | translate }}
+        <strong>{{ listings_count }}</strong> {{ 'transactables.items_listed' | translate }}
       </li>
       <li>
-        <strong> {{ user.completed_host_reservations_count }} </strong> {{ 'transactables.items_rented' | translate }}
+        <strong>{{ user.completed_host_reservations_count }}</strong> {{ 'transactables.items_rented' | translate }}
       </li>
       <li>
-        {{ 'registrations.member_since' | translate }} <strong> {{ user.created_at | to_date | l: 'short' }} </strong>
+        {{ 'registrations.member_since' | translate }} <strong>{{ user.created_at | to_date | l: 'short' }}</strong>
       </li>
-    <hr>
+    </ul>
 
-    <a href=''>
-      {{ 'inappropriate_reports.flag_as_inappropriate' | translate }}
-    </a>
+    <hr />
 
+    <p><strong>Lender verified</strong></p>
+
+    <hr />
+
+    <a href=''>{{ 'inappropriate_reports.flag_as_inappropriate' | translate }}</a>
   </aside>
-</div>
-</div>
-
+</div> <!-- Wrapper -->
