--- a/lib/tasks/litvault/liquid_views/registrations/show.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations/show.liquid
@@ -30,20 +30,16 @@
             <h2>{{ user.company_name }}</h2>
 
             <ul class="social-c">
-              {% if user.has_active_blog? %}
-                <li class="blog"><a href="{{ user.user_blog_posts_list_path }}">View Blog</a></li>
+              {% if user.properties.linkedin_url != blank %}
+                <li class="linkedin"><a href="{{ user.properties.linkedin_url }}" target="_blank">LinkedIn</a></li>
               {% endif %}
 
-              {% if user.buyer_properties['linkedin_url'] != blank %}
-                <li class="linkedin"><a href="{{ user.buyer_properties['linkedin_url'] }}" target="_blank">LinkedIn</a></li>
+              {% if user.properties.googleplus_url != blank %}
+                <li class="googleplus"><a href="{{ user.properties.googleplus_url }}" target="_blank">Google+</a></li>
               {% endif %}
 
-              {% if user.buyer_properties['googleplus_url'] != blank %}
-                <li class="googleplus"><a href="{{ user.buyer_properties['googleplus_url'] }}" target="_blank">Google+</a></li>
-              {% endif %}
-
-              {% if user.buyer_properties['twitter_url'] != blank %}
-                <li class="twitter"><a href="{{ user.buyer_properties['twitter_url'] }}" target="_blank">Twitter</a></li>
+              {% if user.properties.twitter_url != blank %}
+                <li class="twitter"><a href="{{ user.properties.twitter_url }}" target="_blank">Twitter</a></li>
               {% endif %}
 
               <li class="message"><a data-href='{{ user.user_message_path }}' data-modal='true'>Send Message</a>
@@ -55,24 +51,60 @@
             </ul>
           </div>
 
-          <div class="properties">
+          <div class="user-properties">
             <dl>
-              <dt>Client Prop 1:</dt>
-              <dd>{{ user.properties.prop1 }}</dd>
+              <dt>States Licensed to Practice Law:</dt>
+              <dd>{{ user.properties.states | split: ',' | compact | join: ', ' }}</dd>
 
-              <dt>Client Prop 2:</dt>
-              <dd>{{ user.properties.prop1 }}</dd>
-            </dl>
+              {% if user.buyer_properties.number_of_jury_trials != blank %}
+              <dt>Number of Jury Trials:</dt>
+              <dd>{{ user.buyer_properties.number_of_jury_trials | nl2br  }}</dd>
+              {% endif %}
 
-            <dl>
-              <dt>Second column prop:</dt>
-              <dd>{{ user.properties.prop3 }}</dd>
+              {% if user.buyer_properties.total_settlements != blank %}
+              <dt>Total Settlements:</dt>
+              <dd>{{ user.buyer_properties.total_settlements | nl2br  }}</dd>
+              {% endif %}
+
+              {% if user.buyer_properties.average_settlements != blank %}
+              <dt>Average Settlements:</dt>
+              <dd>{{ user.buyer_properties.average_settlements | nl2br  }}</dd>
+              {% endif %}
+
+              {% if user.buyer_properties.total_settlements != blank %}
+              <dt>Total Settlements:</dt>
+              <dd>{{ user.buyer_properties.total_settlements | nl2br  }}</dd>
+              {% endif %}
+
+              {% if user.buyer_properties.experience_for_tier_1_case_sub_classification != blank %}
+              <dt>Experience for Tier 1 Case Sub Classification</dt>
+              <dd>{{ user.buyer_properties.experience_for_tier_1_case_sub_classification | nl2br }}</dd>
+              {% endif %}
+
+              {% if user.buyer_properties.honors_awards.size > 0 %}
+                <dt>Honors &amp; Awards:</dt>
+                <dd>
+                  <ul>
+                    {% for award in user.buyer_properties.honors_awards %}
+                    <li>{{ award }}</li>
+                    {% endfor %}
+                  </ul>
+              {% endif %}
             </dl>
           </div>
         </div>
+        {% if user.properties.bio != blank or user.properties.number_of_cases_referred_in_the_past != blank %}
         <div class="description">
-          {{ user.buyer_properties['bio'] | nl2br  }}
+          {% if user.properties.bio != blank %}
+            <h3>Biography</h3>
+            <p>{{ user.properties.bio | nl2br  }}</p>
+            {% endif %}
+          {% if user.properties.bio != blank and user.properties.number_of_cases_referred_in_the_past != blank %}
+            <h3>Number and Types of Cases Referred in the Past</h3>
+            <p>{{ user.properties.number_of_cases_referred_in_the_past | nl2br }}</p>
+          {% endif %}
         </div>
+        {% endif %}
       </article>
 
       <aside class="sidebar">
@@ -88,9 +120,19 @@
                   {% include 'shared/components/wish_list_button_injection.html', object: user %}
                 </li>
               {% endif %}
+
+              {% if user.has_active_blog? %}
+                <li><a href="{{ user.user_blog_posts_list_path }}" class="button-a">View Blog</a></li>
+              {% endif %}
             </ul>
           </div>
           <hr>
+        {% endif %}
+
+        {% if user.properties.company_about %}
+        <h3>About Law Firm:</h3>
+        <p>{{ user.properties.company_about | nl2br}}</p>
+        <hr>
         {% endif %}
 
         {% if user.tags.size > 0 %}
@@ -105,14 +147,8 @@
           <hr>
         {% endif %}
 
-        {% if user.has_active_credit_cards? %}
-          <p class="payment-verified">
-            <strong>Payment Method Verified</strong>
-          </p>
-        {% endif %}
-
         <p class="flag-inappropriate">
-          <a data-href="{{ user.inappropriate_report_path }}" data-modal="true">Report this user</a>
+          <a data-href="{{ user.inappropriate_report_path }}" data-modal="true">Flag as inappropriate</a>
         </p>
 
       </aside>
