--- a/app/views/dashboard/buyers/edit.html.haml
+++ b/app/views/dashboard/buyers/edit.html.haml
@@ -3,8 +3,7 @@
 - content_for :page_header do
   %h1= yield :title
 
-  .options
-    = link_to t('dashboard.user_profile.view_profile'), user_path(current_user)
+  = render 'registrations/edit_options'
 
 = render 'dashboard/shared/profile_nav', active: :buyer
 
