NM-6058 filtering user messages

--- a/app/frontend/stylesheets/new_ui/general/_search-form.scss
+++ b/app/frontend/stylesheets/new_ui/general/_search-form.scss
@@ -20,4 +20,9 @@ form.search {
             width: $button-mid-min-width;
         }
     }
+
+    &.user-message-search {
+      margin-bottom: 20px;
+    }
 }
+
