--- a/lib/tasks/litvault/liquid_views/search/list.liquid
+++ b/lib/tasks/litvault/liquid_views/search/list.liquid
@@ -7,3 +7,7 @@
 {% else %}
     {% include 'search/list_cases.html' %}
 {% endif %}
+
+{% content_for 'domready' %}
+    $(document).trigger('init:list:searchresults.nearme');
+{% endcontent_for %}
